--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,10 @@
 helix-importer-ui
 dompurify.min.js
+helix-importer-ui
+rollup/*
+blocks/form/rules/formula/*
+blocks/form/rules/model/*
+blocks/form/rules/functions.js
+scripts/editor-support.js
+scripts/editor-support-rte.js
+/test
